--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/vendor/animation.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- endbuild -->
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Lato" rel="stylesheet">
     <script src="assets/vendor/modernizr.js"></script>
 </head>
 <body>
@@ -49,18 +50,18 @@
 
         <div class="slide slide-one">
             <h2>Here are some of my latest works</h2>
-            <p><a href="https://negociarias.com.br/" target="_blank">Negociarias (Media Website)</a></p>
-            <p><a href="http://www.liminha.com.br/en/" target="_blank">Liminha (Music Producer)</a></p>
-            <p><a href="http://www.lenine.com.br/" target="_blank">Lenine (Singer)</a></p>
-            <p><a href="http://www.jovemcientista.cnpq.br/" target="_blank">Prêmio Jovem Cientista (Institutional Website)</a></p>
-            <p><a href="https://joaobidu.com.br/" target="_blank">João Bidu (Media Website)</a></p>
+            <p><a href="https://negociarias.com.br/" target="_blank">Negociarias (Media Website)</a><span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
+            <p><a href="http://www.liminha.com.br/en/" target="_blank">Liminha (Music Producer)</a><span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
+            <p><a href="http://www.lenine.com.br/" target="_blank">Lenine (Singer)</a><span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
+            <p><a href="http://www.jovemcientista.cnpq.br/" target="_blank">Prêmio Jovem Cientista (Institutional Website)</a><span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
+            <p><a href="https://joaobidu.com.br/" target="_blank">João Bidu (Media Website)</a><span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
         </div>
 
     </div>
 
     <div class="section section-three">
         <h2>Contact me</h2>
-        <p><a href="mailto:murillo@murillocamargo.com.br">E-mail</a></p>
+        <p><a href="mailto:murillo@murillocamargo.com.br"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></p>
     </div>
 </div>
 
